# This is a file that will install dependencies etc.

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "labvision"
version = "1.0.0"
dependencies = [
"sphinx>=4.0",
"sphinx-autobuild>=2021.3.14",
"sphinx-rtd-theme>=1.2.0",
"opencv-python",
"numpy",
"matplotlib",
"pywin32",
"pexpect",
"pillow",
"scipy",
"slicerator",
"qtwidgets @ git+https://github.com/MikeSmithLabTeam/qtwidgets",
"filehandling @ git+https://github.com/MikeSmithLabTeam/filehandling"
]

[tool.pytest.ini_options]
testpaths = ["tests"]


